# example-portable-data-parallel-extensions

./: .gitmodules  README.md
steps/first_cpp_app/: README.md  first.cpp
steps/kernel_density_estimation_cpp/: .gitignore  CMakeLists.txt  README.md  app.cpp  building.md  kde.hpp  meson.build
steps/mkl_interface/: .gitignore  README.md  building.md  environment.yml  requirements_build.txt  run.py
steps/mkl_interface/meson_mkl_ext/: environment.yml  meson.build  meson.options  pyproject.toml  requirements.txt  requirements_build.txt
steps/mkl_interface/mkl_interface_ext/: __init__.py  _qr_impl.py
steps/mkl_interface/scikit_build_core_mkl_ext/: CMakeLists.txt  environment.yml  pyproject.toml  requirements_build.txt
steps/mkl_interface/src/: py.cpp
steps/mkl_interface/tests/: test_qr.py
steps/sycl_python_extension/: .gitignore  README.md  building.md  environment.yml  environment_build.yml  requirements.txt  run.py
steps/sycl_python_extension/kde_sycl_ext/: __init__.py  _kde_impls.py
steps/sycl_python_extension/meson_sycl_python_extension/: environment.yml  environment_build.yml  meson.build  pyproject.toml
steps/sycl_python_extension/scikit_build_core_sycl_python_extension/: CMakeLists.txt  environment.yml  environment_build.yml  pyproject.toml  requirements.txt
steps/sycl_python_extension/src/: kde.hpp  py.cpp
