[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core",
    "pybind11",
    "dpctl",
    "cmake>=3.27",
    "ninja>=1.11.1; platform_system!='Windows'",
]

[project]
name = "kde_sycl_ext"
version = "0.0.1"
description="An example of a kernel density estimation pybind11 extension for dpctl"
authors=[
    {name = "Oleksandr Pavlyk", email="oleksandr.pavlyk@intel.com"},
    {name = "Nikita Grigorian", email="nikita.grigorian@intel.com"}
]
license={text = "Apache 2.0"}
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["../kde_sycl_ext"]
